--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
 
 </head>
 <body>
-<h1>Xiruo Wang</h1>
+<h1>Yajie Niu</h1>
 <p>Department of Computer Sciences
-kevinxrwang@utexas.edu</p>
-<p>My research area is Machine learning and Security. I have background in security and cryptography. I aslo have a math degree from UT that I learnt many encryption algorithm such as RSA and elliptic curve from.   </p>
+yajieniu@utexas.edu</p>
+<p>My research area is computer vision and Robotics. I also have background in systems and machine learning. I'm a second year Master in 5-Year CS MS/BS program and have a Math Bachelor's degree. </p>
 
 <p>Three potential topics I would be interested in are:</p>
-<p>(1) Machine Learning in Network Intrusion Detection</p>
-<p>(2) Machine Learning in Malicious and spam email Detection</p>
-<p>(3) Machine Learning in Authentication with Keystroke Dynamics</p>
-<p>I have found a partner. Good Luck!</p>
+<p>(1) Deep reinforcement learning </p>
+<p>(2) Image recognition with convolutional networks </p>
+<p>(3) Generative Adversarial Nets </p>
+<p> I have not yet teamed up with anyone. </p>
 </body>
 </html>
 
