--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <h1>Yajie Niu</h1>
-<p>Department of Computer Sciences
-yajieniu@utexas.edu</p>
+<p>Department of Computer Sciences </p>
+<p>yajieniu@utexas.edu</p>
 <p>My research area is computer vision and Robotics. I also have background in systems and machine learning. I'm a second year Master in 5-Year CS MS/BS program and have a Math Bachelor's degree. </p>
 
 <p>Three potential topics I would be interested in are:</p>
